bbss218/force-app/main/default/objects/Contact/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>