bbss218/force-app/main/default/objects/Contact/fields/Last_Checked__c.field-meta.xml
<CustomField>
    <fullName>Last_Checked__c</fullName>
    <label>Last Checked</label>
    <type>Date</type>
</CustomField>