bbss218/force-app/main/default/objects/Contact/fields/Twitter_X_URL__c.field-meta.xml
<CustomField>
    <fullName>Twitter_X_URL__c</fullName>
    <label>Twitter (X) URL</label>
    <type>Url</type>
</CustomField>